--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background: #8758ff;
+  background: #EA5959;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,16 +19,18 @@ body {
 }
 
 h1 {
-  color: #fff;
+  color: #000000;
   margin-bottom: 0.5rem;
   font-size: 1.75rem;
 }
 
 .TodoWrapper {
-  background: #1A1A40;
+  background: #fff;
   margin-top: 5rem;
   padding: 2rem;
   border-radius: 5px;
+  width: 1000px;
+  height: 700px;
 }
 
 .TodoForm {
@@ -39,35 +41,33 @@ h1 {
 .todo-input {
   outline: none;
   background: none;
-  border: 1px solid #8758ff;
+  border: 1px solid #F3F3F3;
+  border-radius: 8px;
   padding: 0.5rem 1rem;
   margin-top: 1rem;
   margin-bottom: 2rem;
-  width: 300px;
-  color: #fff;
+  width: 621px;
+  color: #525252;
+  background-color: #F3F3F3;
 }
 
 .todo-input::placeholder {
-  color: #ffffff4d;
+  color: #b5b5b5;
 }
 
 .todo-btn {
-  background: #8758ff;
-  color: #fff;
-  border: none;
-  padding: 0.55rem;
-  cursor: pointer;
+  display: none;
 }
 
 .Todo {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #8758ff;
-  color: #fff;
+  color: #5A5A5A;
   padding: 0.75rem 1rem;
   border-radius: 5px;
   margin-bottom: 1rem;
+  
 }
 
 .fa-trash {
@@ -75,12 +75,12 @@ h1 {
 }
 
 .incompleted {
-  color: #fff;
+  color: #5A5A5A;
   cursor: pointer;
 }
 
 .completed {
-  color: #c5aeff;
+  color: #5A5A5A;
   text-decoration: line-through;
   cursor: pointer;
 }
